Solved content overlap issue for search page

--- a/sites/all/themes/hk_theme/sass/components/_leaflet.scss
+++ b/sites/all/themes/hk_theme/sass/components/_leaflet.scss
@@ -1658,6 +1658,7 @@ body.not-front.not-logged-in.page-hybridauth { background: none; }
       }
     }
     #main {
+      margin-top: 60px;
       background: transparent;
       border: none;
       #block-hk-custom-crm-crm-contact-type,
@@ -1672,6 +1673,7 @@ body.not-front.not-logged-in.page-hybridauth { background: none; }
           background-color: #1A1A1A;
           color: #FFF;
           font-size: 14px;
+          line-height: 19px;
           cursor: pointer;
           background-image: url("../images/select_arrow.gif");
           background-position: right 10px center;
@@ -1699,7 +1701,8 @@ body.not-front.not-logged-in.page-hybridauth { background: none; }
         }
         .view-crm-activity-type {
           p {
-            margin: 1px 0 2px;
+            margin: 0;
+            line-height: 19px;
           }
         }
         .item-list {
